--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,7 @@ pickleshare==0.7.5
 Pillow==9.5.0
 prompt-toolkit==3.0.38
 proto-plus==1.22.2
-protobuf==3.20.3
+# protobuf==3.20.3
 psutil==5.9.5
 pure-eval==0.2.2
 pyasn1==0.4.8
