--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,123 @@
+# absl-py==1.4.0
+# asttokens==2.2.1
+# astunparse==1.6.3
+# backcall==0.2.0
+# bcrypt==4.0.1
+# cachetools==5.3.0
+# certifi==2022.12.7
+# charset-normalizer==3.1.0
+# click==8.1.3
+# colorama==0.4.6
+# contourpy==1.0.7
+# cycler==0.11.0
+# decorator==5.1.1
+# easyocr==1.6.2
+# editdistance==0.6.2
+# efficientnet==1.0.0
+# essential-generators==1.0
+# executing==1.2.0
+# filelock==3.11.0
+# Flask==2.2.3
+# flatbuffers==23.3.3
+# fonttools==4.39.3
+# gast==0.4.0
+# google-api-core==2.11.0
+# google-auth==2.17.2
+# google-auth-oauthlib==1.0.0
+# google-cloud-vision==3.4.1
+# google-pasta==0.2.0
+# googleapis-common-protos==1.59.0
+# grpcio==1.54.0
+# grpcio-status==1.54.0
+# h5py==3.8.0
+# huggingface-hub==0.13.4
+# idna==3.4
+# imageio==2.28.0
+# imgaug==0.4.0
+# imutils==0.5.4
+# ipython==8.13.2
+# itsdangerous==2.1.2
+# jax==0.4.8
+# jedi==0.18.2
+# Jinja2==3.1.2
+# keras==2.12.0
+# Keras-Applications==1.0.8
+# keras-ocr==0.8.9
+# kiwisolver==1.4.4
+# lazy_loader==0.2
+# libclang==16.0.0
+# Markdown==3.4.3
+# MarkupSafe==2.1.2
+# matplotlib==3.7.1
+# matplotlib-inline==0.1.6
+# ml-dtypes==0.0.4
+# mpmath==1.3.0
+# mysql==0.0.3
+# mysql-connector==2.2.9
+# mysql-connector-python==8.0.33
+# mysqlclient==2.1.1
+# networkx==3.1
+# ninja==1.11.1
+# numpy==1.23.5
+# oauthlib==3.2.2
+# opencv-python==4.7.0.72
+# opencv-python-headless==4.5.4.60
+# opt-einsum==3.3.0
+# packaging==23.0
+# pandas==2.0.1
+# parso==0.8.3
+# pickleshare==0.7.5
+# Pillow==9.5.0
+# prompt-toolkit==3.0.38
+# proto-plus==1.22.2
+# # protobuf==3.20.3
+# psutil==5.9.5
+# pure-eval==0.2.2
+# pyasn1==0.4.8
+# pyasn1-modules==0.2.8
+# pyclipper==1.3.0.post4
+# pygame==2.3.0
+# Pygments==2.15.1
+# pyparsing==3.0.9
+# pytesseract==0.3.10
+# python-bidi==0.4.2
+# python-dateutil==2.8.2
+# pytz==2023.3
+# PyWavelets==1.4.1
+# PyYAML==6.0
+# regex==2023.3.23
+# requests==2.28.2
+# requests-oauthlib==1.3.1
+# rsa==4.9
+# scikit-image==0.20.0
+# scipy==1.10.1
+# seaborn==0.12.2
+# sentry-sdk==1.21.1
+# shapely==2.0.1
+# six==1.16.0
+# stack-data==0.6.2
+# sympy==1.11.1
+# tensorboard==2.12.1
+# tensorboard-data-server==0.7.0
+# tensorboard-plugin-wit==1.8.1
+# termcolor==2.2.0
+# thop==0.1.1.post2209072238
+# tifffile==2023.4.12
+# tokenizers==0.13.3
+# torchvision==0.15.1
+# tqdm==4.65.0
+# traitlets==5.9.0
+# transformers==4.27.4
+# typing_extensions==4.5.0
+# tzdata==2023.3
+# ultralytics==8.0.89
+# urllib3==1.26.15
+# validators==0.20.0
+# wcwidth==0.2.6
+# Werkzeug==2.2.3
+# wrapt==1.14.1
+
+
 absl-py==1.4.0
 asttokens==2.2.1
 astunparse==1.6.3
@@ -70,7 +190,6 @@ pickleshare==0.7.5
 Pillow==9.5.0
 prompt-toolkit==3.0.38
 proto-plus==1.22.2
-# protobuf==3.20.3
 psutil==5.9.5
 pure-eval==0.2.2
 pyasn1==0.4.8
@@ -104,6 +223,7 @@ termcolor==2.2.0
 thop==0.1.1.post2209072238
 tifffile==2023.4.12
 tokenizers==0.13.3
+torch==1.10.0
 torchvision==0.15.1
 tqdm==4.65.0
 traitlets==5.9.0
