--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.2.3
 mysql-connector==2.2.9
 transformers==4.27.4
-ultralytics==8.0.89
+# ultralytics==8.0.89
 Pillow==9.5.0
 scikit-image==0.20.0
 matplotlib==3.7.1
